<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:stonekity="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color_white"
    android:orientation="vertical" >

    <com.stone.shop.base.widget.TitleBarView
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        stonekity:titleText="@string/title_activity_feed_back"
        stonekity:rightBtnText="@string/text_btn_submit"
        stonekity:leftBtnText="@string/text_btn_back">
    </com.stone.shop.base.widget.TitleBarView>
    

    <EditText
        android:id="@+id/et_feedback_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:ems="10"
        android:gravity="top"
        android:hint="问题或建议"
        android:textColor="@color/text_color_normal"
        android:lines="8" >
        <requestFocus />
    </EditText>
    
</LinearLayout>
