<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- 成绩是否可修改 -->

    <!-- 是否评教 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <!-- 课程名称 -->
        <TextView
            style="@style/text_header_stu_grade_style"
            android:id="@+id/tv_header_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_table_header_task_name"
            android:layout_weight="1"/>


        <!-- 课程学分 -->
        <TextView
            style="@style/text_header_stu_grade_style"
            android:id="@+id/tv_header_grade_credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_table_header_grade_credit"
            android:layout_weight="2"/>


        <!-- 课程学分绩点 -->
        <TextView
            style="@style/text_header_stu_grade_style"
            android:id="@+id/tv_stu_header_grade_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_table_header_grade_point"
            android:layout_weight="2"/>


        <!-- 成绩 -->
        <TextView
            style="@style/text_header_stu_grade_style"
            android:id="@+id/tv_header_grade_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_table_header_grade_grade"
            android:layout_weight="2"/>

    </LinearLayout>



</LinearLayout>